tests/parse_print/random_perturb/set01/delete-06/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-06/delete-06.essence line 3, column 20:
unexpected of
expecting ), comma, expression, operator, or rest of expression
    line 3, column 20
    find x : set (size 2 of int(1..3)
                    ^^^^^^^